[package]
name = "wait-for-url"
version = "1.4.0"
authors = ["Stephen Connolly <stephen.alan.connolly@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2.21"
reqwest = "0.9.22"
shellexpand = "1.1.1"
